# whetherwecando

./: .gitignore
.claude/: settings.local.json
backend/: .env.example  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  demand_agent.py  devils_agent.py  differentiation_agent.py  feasibility_agent.py  judge_node.py  keyword_agent.py  llm_client.py
backend/api/: __init__.py  crawler_routes.py  crawler_ws.py  extract.py  routes.py
backend/cleaner/: __init__.py  processor.py
backend/crawler/: __init__.py  api.py  auth_manager.py  base.py  data_transformer.py  error_handler.py  media_crawler_adapter.py  media_crawler_config.py  media_crawler_output.py  media_crawler_runner.py  mock_data.py  models.py  task_scheduler.py  xiaohongshu.py  zhihu.py
backend/crawler/utils/: __init__.py  crypto.py  emotion_detector.py  env_checker.py  rate_limiter.py
backend/database/: connection.py  init.sql  init_crawler_tables.sql
backend/models/: __init__.py  report.py  schemas.py
backend/report/: __init__.py  generator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: CrawlerAuth.vue  CrawlerTask.vue  Home.vue  Report.vue  Validating.vue
tests/: test_agents.py  test_api.py  test_cleaner.py  test_crawler.py
tests/test_crawler/: test_crawler.py
